java11用のプロファイルを追加