@@ -21,13 +21,19 @@
 
   <profiles>
     <profile>
-      <id>java9</id>
-      <activation>
-        <jdk>9</jdk>
-      </activation>
-      <properties>
-        <junit.additionalArgLine>--add-modules java.xml.bind,java.activation</junit.additionalArgLine>
-      </properties>
+      <id>java11</id>
+      <dependencies>
+        <dependency>
+          <groupId>javax.activation</groupId>
+          <artifactId>javax.activation-api</artifactId>
+          <version>1.2.0</version>
+        </dependency>
+        <dependency>
+          <groupId>javax.xml.bind</groupId>
+          <artifactId>jaxb-api</artifactId>
+          <version>2.3.1</version>
+        </dependency>
+      </dependencies>
       <build>
         <plugins>
           <plugin>
